--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,26 @@
   font-family: "Jost", sans-serif;
 }
 
+/* header  */
+.navbar {
+  background-color: #151515;
+}
+
+/* main  */
+a.dropdown-item {
+  color: #ddd;
+
+}
+
+.dropdown-menu {
+  background: #151515;
+  border: 1px solid #333;
+}
+
+.navbar-expand-lg .navbar-nav .dropdown-menu:before {
+  color: #151515;
+}
+
 /* About */
 #about {
   background-color: black;
@@ -45,6 +65,7 @@
 #features {
   background-color: #222;
 }
+
 .features__item {
   padding: 40px 30px;
   margin-bottom: 30px;
@@ -80,6 +101,5 @@
 }
 
 .features__item h4 a:hover {
-    color: #189a46;
+  color: #189a46;
 }
-
