--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,15 @@ a.dropdown-item {
   font-size: 40px;
   line-height: 3rem;
   font-weight: 600;
+  margin-bottom: .5rem;
 }
 
 .title h6 {
   color: #f53626;
-  font-size: 1rem;
+  font-size: 1.3rem;
   line-height: 1rem;
   font-weight: 400;
+  margin-bottom: .5rem;
 }
 
 .about__title p {
@@ -80,12 +82,12 @@ a.dropdown-item {
   color: #189a46;
 }
 
-.features__item h4 a {
+.features__item .title-head {
   font-size: 1.7rem;
   color: white;
   text-decoration: none;
-  margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
   font-weight: 600;
 }
 
