--- a/Background white/css/style-liberty.css
+++ b/Background white/css/style-liberty.css
@@ -14583,7 +14583,7 @@ a.dropdown-item:hover:before {
   font-size: 1.2em;
   font-weight: 400;
   position: relative;
-  color: #ddd;
+  color: #000c04;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover {
