--- a/Background white/css/style.css
+++ b/Background white/css/style.css
@@ -4,8 +4,13 @@
 }
 
 /* header  */
+#site-header {
+  background-color: white;
+}
+
+
 .navbar {
-  background-color: #151515;
+  background-color: white;
 }
 
 /* main  */
@@ -24,11 +29,11 @@ a.dropdown-item {
 
 /* About */
 #about {
-  background-color: black;
+  background-color: white;
 }
 
 .title h3 {
-  color: white;
+  color: black;
   font-size: 40px;
   line-height: 3rem;
   font-weight: 600;
@@ -45,16 +50,16 @@ a.dropdown-item {
 
 .about__title p {
   font-size: 1.2rem;
-  color: #afafaf;
+  color: #696969;
 }
 
-.read {
-  color: white;
+.bottom-ab-grids .read {
   font-size: 17px;
   border-bottom: 2px solid #189a46;
   margin-top: 1rem;
   transition: 0.3s ease-in-out;
   font-weight: 600;
+  color: black;
 }
 
 .read:hover {
@@ -70,7 +75,7 @@ a.dropdown-item {
 
 /* Features */
 #features {
-  background-color: #222;
+  background-color: rgba(249, 247, 254, 1);
 }
 
 .features__item {
@@ -78,7 +83,7 @@ a.dropdown-item {
   margin-bottom: 30px;
   transition: all 0.5s;
   position: relative;
-  background-color: #151515;
+  background-color: #fff;
   border-radius: 10px;
 }
 
@@ -90,7 +95,7 @@ a.dropdown-item {
 
 .features__item h4 a {
   font-size: 1.7rem;
-  color: white;
+  color: #151515;
   text-decoration: none;
   margin-bottom: 1rem;
   margin-top: 2rem;
@@ -100,8 +105,12 @@ a.dropdown-item {
 .features__item p {
   font-size: 1.2em;
   line-height: 1.8rem;
-  color: #afafaf;
+  color: #696969;
   margin-top: 1rem;
+}
+
+.features__item .read {
+  color: black;
 }
 
 .features__item:hover {
@@ -114,7 +123,7 @@ a.dropdown-item {
 
 /* Services */
 .services {
-  background-color: black;
+  background-color: white;
 }
 .services .services__text {
   align-self: center;
@@ -124,7 +133,7 @@ a.dropdown-item {
 .services__text p {
   font-size: 1rem;
   margin: 15px 0 35px 0;
-  color: #afafaf;
+  color: #696969;
   list-style: 2rem;
 }
 
@@ -139,7 +148,7 @@ a.dropdown-item {
 
 .services__text ul li {
   margin-bottom: 1rem;
-  color: white;
+  color: black;
   font-weight: 600;
   line-height: 2rem;
 }
@@ -147,7 +156,7 @@ a.dropdown-item {
 .services__text ul li span {
   color: #189a46;
   margin-right: 0.5rem;
-  background: #222;
+  background: rgba(249, 247, 254, 1);
   border-radius: 50%;
   font-size: 0.8rem;
   padding: 8px;
@@ -155,12 +164,12 @@ a.dropdown-item {
 
 /* Video */
 .middle-section .mt-3 {
-  color: #afafaf;
+  color: #696969;
 }
 
 /* Testimonials */
 #clients {
-  background-color: #222;
+  background-color: rgba(249, 247, 254, 1);
 }
 
 #clients .sub-title {
@@ -180,7 +189,7 @@ a.dropdown-item {
   margin: 0;
   padding: 40px 30px;
   position: relative;
-  background: #151515;
+  background: white;
   border-radius: var(--border-radius);
   -webkit-border-radius: var(--border-radius);
   -o-border-radius: var(--border-radius);
@@ -200,7 +209,7 @@ a.dropdown-item {
 .testimonial blockquote q {
   font-size: 1.2em;
   line-height: 28px;
-  color: #afafaf;
+  color: #696969;
 }
 
 .testi-des {
@@ -227,7 +236,7 @@ a.dropdown-item {
   margin: 0;
   font-weight: 600;
   font-size: 20px;
-  color: #ddd;
+  color: #111111;
 }
 
 .testimonial p.indentity {
@@ -304,7 +313,7 @@ blockquote q::before {
 
 /* Bottom */
 .bottom {
-  background-color: #151515;
+  background-color: white;
 }
 
 .bottom .subscribe {
@@ -442,4 +451,9 @@ blockquote q::before {
   line-height: 36px;
   border-radius: 50px;
   transition: 0.3s ease-out;
+}
+
+#movetop:hover {
+  transform: translateY(-10px);
+  transition: .3s ease-out;
 }
